Meta 4/y.output
Terminals unused in grammar

   RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID OBRACE ProgramList CBRACE

    2 ProgramList: ProgramList FieldDecl
    3            | ProgramList MethodDecl
    4            | ProgramList SEMI
    5            | %empty

    6 FieldDecl: PUBLIC STATIC FieldIdList SEMI
    7          | error SEMI

    8 FieldIdList: FieldIdList COMMA ID
    9            | Type ID

   10 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

   11 MethodHeader: Type ID OCURV CCURV
   12             | Type ID OCURV FormalParams CCURV
   13             | VOID ID OCURV CCURV
   14             | VOID ID OCURV FormalParams CCURV

   15 MethodBody: OBRACE MethodBodyList CBRACE

   16 MethodBodyList: MethodBodyList VarDecl
   17               | MethodBodyList Statement
   18               | %empty

   19 FormalParams: FormalParamsList
   20             | STRING OSQUARE CSQUARE ID

   21 FormalParamsList: FormalParamsList COMMA Type ID
   22                 | Type ID

   23 VarDecl: VarIdList SEMI

   24 VarIdList: VarIdList COMMA ID
   25          | Type ID

   26 Type: BOOL
   27     | INT
   28     | DOUBLE

   29 Statement: OBRACE StatementList CBRACE
   30          | IF OCURV Expr CCURV Statement ELSE Statement
   31          | IF OCURV Expr CCURV Statement
   32          | WHILE OCURV Expr CCURV Statement
   33          | DO Statement WHILE OCURV Expr CCURV SEMI
   34          | PRINT OCURV Expr CCURV SEMI
   35          | PRINT OCURV STRLIT CCURV SEMI
   36          | SEMI
   37          | Assignment SEMI
   38          | MethodInvocation SEMI
   39          | ParseArgs SEMI
   40          | RETURN Expr SEMI
   41          | RETURN SEMI
   42          | error SEMI

   43 StatementList: StatementList Statement
   44              | %empty

   45 Assignment: ID ASSIGN Expr

   46 MethodInvocation: ID OCURV ExprList CCURV
   47                 | ID OCURV CCURV
   48                 | ID OCURV error CCURV

   49 ExprList: ExprList COMMA Expr
   50         | Expr

   51 ParseArgs: PARSEINT OCURV ID OSQUARE Expr CSQUARE CCURV
   52          | PARSEINT OCURV error CCURV

   53 Expr: Assignment
   54     | Expr2

   55 Expr2: MethodInvocation
   56      | ParseArgs
   57      | Expr2 AND Expr2
   58      | Expr2 OR Expr2
   59      | Expr2 EQ Expr2
   60      | Expr2 GEQ Expr2
   61      | Expr2 GT Expr2
   62      | Expr2 LEQ Expr2
   63      | Expr2 LT Expr2
   64      | Expr2 NEQ Expr2
   65      | Expr2 PLUS Expr2
   66      | Expr2 MINUS Expr2
   67      | Expr2 STAR Expr2
   68      | Expr2 DIV Expr2
   69      | Expr2 MOD Expr2
   70      | PLUS Expr2
   71      | MINUS Expr2
   72      | NOT Expr2
   73      | ID DOTLENGTH
   74      | ID
   75      | OCURV Expr CCURV
   76      | BOOLLIT
   77      | DECLIT
   78      | REALLIT
   79      | OCURV error CCURV


Terminals, with rules where they appear

$end (0) 0
error (256) 7 42 48 52 79
CBRACE (258) 1 15 29
CCURV (259) 11 12 13 14 30 31 32 33 34 35 46 47 48 51 52 75 79
CSQUARE (260) 20 51
OBRACE (261) 1 15 29
OCURV (262) 11 12 13 14 30 31 32 33 34 35 46 47 48 51 52 75 79
OSQUARE (263) 20 51
AND (264) 57
ASSIGN (265) 45
BOOL (266) 26
CLASS (267) 1
COMMA (268) 8 21 24 49
DIV (269) 68
DO (270) 33
DOTLENGTH (271) 73
DOUBLE (272) 28
ELSE (273) 30
EQ (274) 59
GEQ (275) 60
GT (276) 61
IF (277) 30 31
INT (278) 27
LEQ (279) 62
LT (280) 63
MINUS (281) 66 71
MOD (282) 69
NEQ (283) 64
NOT (284) 72
OR (285) 58
RETURN (286) 40 41
PARSEINT (287) 51 52
PLUS (288) 65 70
PRINT (289) 34 35
PUBLIC (290) 6 10
SEMI (291) 4 6 7 23 33 34 35 36 37 38 39 40 41 42
STAR (292) 67
STATIC (293) 6 10
STRING (294) 20
VOID (295) 13 14
WHILE (296) 32 33
RESERVED (297)
ID (298) 1 8 9 11 12 13 14 20 21 22 24 25 45 46 47 48 51 73 74
BOOLLIT (299) 76
REALLIT (300) 78
DECLIT (301) 77
STRLIT (302) 35
IFX (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
ProgramList (51)
    on left: 2 3 4 5, on right: 1 2 3 4
FieldDecl (52)
    on left: 6 7, on right: 2
FieldIdList (53)
    on left: 8 9, on right: 6 8
MethodDecl (54)
    on left: 10, on right: 3
MethodHeader (55)
    on left: 11 12 13 14, on right: 10
MethodBody (56)
    on left: 15, on right: 10
MethodBodyList (57)
    on left: 16 17 18, on right: 15 16 17
FormalParams (58)
    on left: 19 20, on right: 12 14
FormalParamsList (59)
    on left: 21 22, on right: 19 21
VarDecl (60)
    on left: 23, on right: 16
VarIdList (61)
    on left: 24 25, on right: 23 24
Type (62)
    on left: 26 27 28, on right: 9 11 12 21 22 25
Statement (63)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 17
    30 31 32 33 43
StatementList (64)
    on left: 43 44, on right: 29 43
Assignment (65)
    on left: 45, on right: 37 53
MethodInvocation (66)
    on left: 46 47 48, on right: 38 55
ExprList (67)
    on left: 49 50, on right: 46 49
ParseArgs (68)
    on left: 51 52, on right: 39 56
Expr (69)
    on left: 53 54, on right: 30 31 32 33 34 40 45 49 50 51 75
Expr2 (70)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79, on right: 54 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID OBRACE ProgramList CBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . OBRACE ProgramList CBRACE

    OBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID OBRACE . ProgramList CBRACE

    $default  reduce using rule 5 (ProgramList)

    ProgramList  go to state 6


State 6

    1 Program: CLASS ID OBRACE ProgramList . CBRACE
    2 ProgramList: ProgramList . FieldDecl
    3            | ProgramList . MethodDecl
    4            | ProgramList . SEMI

    error   shift, and go to state 7
    CBRACE  shift, and go to state 8
    PUBLIC  shift, and go to state 9
    SEMI    shift, and go to state 10

    FieldDecl   go to state 11
    MethodDecl  go to state 12


State 7

    7 FieldDecl: error . SEMI

    SEMI  shift, and go to state 13


State 8

    1 Program: CLASS ID OBRACE ProgramList CBRACE .

    $default  reduce using rule 1 (Program)


State 9

    6 FieldDecl: PUBLIC . STATIC FieldIdList SEMI
   10 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody

    STATIC  shift, and go to state 14


State 10

    4 ProgramList: ProgramList SEMI .

    $default  reduce using rule 4 (ProgramList)


State 11

    2 ProgramList: ProgramList FieldDecl .

    $default  reduce using rule 2 (ProgramList)


State 12

    3 ProgramList: ProgramList MethodDecl .

    $default  reduce using rule 3 (ProgramList)


State 13

    7 FieldDecl: error SEMI .

    $default  reduce using rule 7 (FieldDecl)


State 14

    6 FieldDecl: PUBLIC STATIC . FieldIdList SEMI
   10 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    VOID    shift, and go to state 18

    FieldIdList   go to state 19
    MethodHeader  go to state 20
    Type          go to state 21


State 15

   26 Type: BOOL .

    $default  reduce using rule 26 (Type)


State 16

   28 Type: DOUBLE .

    $default  reduce using rule 28 (Type)


State 17

   27 Type: INT .

    $default  reduce using rule 27 (Type)


State 18

   13 MethodHeader: VOID . ID OCURV CCURV
   14             | VOID . ID OCURV FormalParams CCURV

    ID  shift, and go to state 22


State 19

    6 FieldDecl: PUBLIC STATIC FieldIdList . SEMI
    8 FieldIdList: FieldIdList . COMMA ID

    COMMA  shift, and go to state 23
    SEMI   shift, and go to state 24


State 20

   10 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    OBRACE  shift, and go to state 25

    MethodBody  go to state 26


State 21

    9 FieldIdList: Type . ID
   11 MethodHeader: Type . ID OCURV CCURV
   12             | Type . ID OCURV FormalParams CCURV

    ID  shift, and go to state 27


State 22

   13 MethodHeader: VOID ID . OCURV CCURV
   14             | VOID ID . OCURV FormalParams CCURV

    OCURV  shift, and go to state 28


State 23

    8 FieldIdList: FieldIdList COMMA . ID

    ID  shift, and go to state 29


State 24

    6 FieldDecl: PUBLIC STATIC FieldIdList SEMI .

    $default  reduce using rule 6 (FieldDecl)


State 25

   15 MethodBody: OBRACE . MethodBodyList CBRACE

    $default  reduce using rule 18 (MethodBodyList)

    MethodBodyList  go to state 30


State 26

   10 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 10 (MethodDecl)


State 27

    9 FieldIdList: Type ID .
   11 MethodHeader: Type ID . OCURV CCURV
   12             | Type ID . OCURV FormalParams CCURV

    OCURV  shift, and go to state 31

    $default  reduce using rule 9 (FieldIdList)


State 28

   13 MethodHeader: VOID ID OCURV . CCURV
   14             | VOID ID OCURV . FormalParams CCURV

    CCURV   shift, and go to state 32
    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 33

    FormalParams      go to state 34
    FormalParamsList  go to state 35
    Type              go to state 36


State 29

    8 FieldIdList: FieldIdList COMMA ID .

    $default  reduce using rule 8 (FieldIdList)


State 30

   15 MethodBody: OBRACE MethodBodyList . CBRACE
   16 MethodBodyList: MethodBodyList . VarDecl
   17               | MethodBodyList . Statement

    error     shift, and go to state 37
    CBRACE    shift, and go to state 38
    OBRACE    shift, and go to state 39
    BOOL      shift, and go to state 15
    DO        shift, and go to state 40
    DOUBLE    shift, and go to state 16
    IF        shift, and go to state 41
    INT       shift, and go to state 17
    RETURN    shift, and go to state 42
    PARSEINT  shift, and go to state 43
    PRINT     shift, and go to state 44
    SEMI      shift, and go to state 45
    WHILE     shift, and go to state 46
    ID        shift, and go to state 47

    VarDecl           go to state 48
    VarIdList         go to state 49
    Type              go to state 50
    Statement         go to state 51
    Assignment        go to state 52
    MethodInvocation  go to state 53
    ParseArgs         go to state 54


State 31

   11 MethodHeader: Type ID OCURV . CCURV
   12             | Type ID OCURV . FormalParams CCURV

    CCURV   shift, and go to state 55
    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17
    STRING  shift, and go to state 33

    FormalParams      go to state 56
    FormalParamsList  go to state 35
    Type              go to state 36


State 32

   13 MethodHeader: VOID ID OCURV CCURV .

    $default  reduce using rule 13 (MethodHeader)


State 33

   20 FormalParams: STRING . OSQUARE CSQUARE ID

    OSQUARE  shift, and go to state 57


State 34

   14 MethodHeader: VOID ID OCURV FormalParams . CCURV

    CCURV  shift, and go to state 58


State 35

   19 FormalParams: FormalParamsList .
   21 FormalParamsList: FormalParamsList . COMMA Type ID

    COMMA  shift, and go to state 59

    $default  reduce using rule 19 (FormalParams)


State 36

   22 FormalParamsList: Type . ID

    ID  shift, and go to state 60


State 37

   42 Statement: error . SEMI

    SEMI  shift, and go to state 61


State 38

   15 MethodBody: OBRACE MethodBodyList CBRACE .

    $default  reduce using rule 15 (MethodBody)


State 39

   29 Statement: OBRACE . StatementList CBRACE

    $default  reduce using rule 44 (StatementList)

    StatementList  go to state 62


State 40

   33 Statement: DO . Statement WHILE OCURV Expr CCURV SEMI

    error     shift, and go to state 37
    OBRACE    shift, and go to state 39
    DO        shift, and go to state 40
    IF        shift, and go to state 41
    RETURN    shift, and go to state 42
    PARSEINT  shift, and go to state 43
    PRINT     shift, and go to state 44
    SEMI      shift, and go to state 45
    WHILE     shift, and go to state 46
    ID        shift, and go to state 47

    Statement         go to state 63
    Assignment        go to state 52
    MethodInvocation  go to state 53
    ParseArgs         go to state 54


State 41

   30 Statement: IF . OCURV Expr CCURV Statement ELSE Statement
   31          | IF . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 64


State 42

   40 Statement: RETURN . Expr SEMI
   41          | RETURN . SEMI

    OCURV     shift, and go to state 65
    MINUS     shift, and go to state 66
    NOT       shift, and go to state 67
    PARSEINT  shift, and go to state 43
    PLUS      shift, and go to state 68
    SEMI      shift, and go to state 69
    ID        shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    REALLIT   shift, and go to state 72
    DECLIT    shift, and go to state 73

    Assignment        go to state 74
    MethodInvocation  go to state 75
    ParseArgs         go to state 76
    Expr              go to state 77
    Expr2             go to state 78


State 43

   51 ParseArgs: PARSEINT . OCURV ID OSQUARE Expr CSQUARE CCURV
   52          | PARSEINT . OCURV error CCURV

    OCURV  shift, and go to state 79


State 44

   34 Statement: PRINT . OCURV Expr CCURV SEMI
   35          | PRINT . OCURV STRLIT CCURV SEMI

    OCURV  shift, and go to state 80


State 45

   36 Statement: SEMI .

    $default  reduce using rule 36 (Statement)


State 46

   32 Statement: WHILE . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 81


State 47

   45 Assignment: ID . ASSIGN Expr
   46 MethodInvocation: ID . OCURV ExprList CCURV
   47                 | ID . OCURV CCURV
   48                 | ID . OCURV error CCURV

    OCURV   shift, and go to state 82
    ASSIGN  shift, and go to state 83


State 48

   16 MethodBodyList: MethodBodyList VarDecl .

    $default  reduce using rule 16 (MethodBodyList)


State 49

   23 VarDecl: VarIdList . SEMI
   24 VarIdList: VarIdList . COMMA ID

    COMMA  shift, and go to state 84
    SEMI   shift, and go to state 85


State 50

   25 VarIdList: Type . ID

    ID  shift, and go to state 86


State 51

   17 MethodBodyList: MethodBodyList Statement .

    $default  reduce using rule 17 (MethodBodyList)


State 52

   37 Statement: Assignment . SEMI

    SEMI  shift, and go to state 87


State 53

   38 Statement: MethodInvocation . SEMI

    SEMI  shift, and go to state 88


State 54

   39 Statement: ParseArgs . SEMI

    SEMI  shift, and go to state 89


State 55

   11 MethodHeader: Type ID OCURV CCURV .

    $default  reduce using rule 11 (MethodHeader)


State 56

   12 MethodHeader: Type ID OCURV FormalParams . CCURV

    CCURV  shift, and go to state 90


State 57

   20 FormalParams: STRING OSQUARE . CSQUARE ID

    CSQUARE  shift, and go to state 91


State 58

   14 MethodHeader: VOID ID OCURV FormalParams CCURV .

    $default  reduce using rule 14 (MethodHeader)


State 59

   21 FormalParamsList: FormalParamsList COMMA . Type ID

    BOOL    shift, and go to state 15
    DOUBLE  shift, and go to state 16
    INT     shift, and go to state 17

    Type  go to state 92


State 60

   22 FormalParamsList: Type ID .

    $default  reduce using rule 22 (FormalParamsList)


State 61

   42 Statement: error SEMI .

    $default  reduce using rule 42 (Statement)


State 62

   29 Statement: OBRACE StatementList . CBRACE
   43 StatementList: StatementList . Statement

    error     shift, and go to state 37
    CBRACE    shift, and go to state 93
    OBRACE    shift, and go to state 39
    DO        shift, and go to state 40
    IF        shift, and go to state 41
    RETURN    shift, and go to state 42
    PARSEINT  shift, and go to state 43
    PRINT     shift, and go to state 44
    SEMI      shift, and go to state 45
    WHILE     shift, and go to state 46
    ID        shift, and go to state 47

    Statement         go to state 94
    Assignment        go to state 52
    MethodInvocation  go to state 53
    ParseArgs         go to state 54


State 63

   33 Statement: DO Statement . WHILE OCURV Expr CCURV SEMI

    WHILE  shift, and go to state 95


State 64

   30 Statement: IF OCURV . Expr CCURV Statement ELSE Statement
   31          | IF OCURV . Expr CCURV Statement

    OCURV     shift, and go to state 65
    MINUS     shift, and go to state 66
    NOT       shift, and go to state 67
    PARSEINT  shift, and go to state 43
    PLUS      shift, and go to state 68
    ID        shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    REALLIT   shift, and go to state 72
    DECLIT    shift, and go to state 73

    Assignment        go to state 74
    MethodInvocation  go to state 75
    ParseArgs         go to state 76
    Expr              go to state 96
    Expr2             go to state 78


State 65

   75 Expr2: OCURV . Expr CCURV
   79      | OCURV . error CCURV

    error     shift, and go to state 97
    OCURV     shift, and go to state 65
    MINUS     shift, and go to state 66
    NOT       shift, and go to state 67
    PARSEINT  shift, and go to state 43
    PLUS      shift, and go to state 68
    ID        shift, and go to state 70
    BOOLLIT   shift, and go to state 71
    REALLIT   shift, and go to state 72
    DECLIT    shift, and go to state 73

    Assignment        go to state 74
    MethodInvocation  go to state 75
    ParseArgs         go to state 76
    Expr              go to state 98
    Expr2             go to state 78


State 66

   71 Expr2: MINUS . Expr2

    OCURV     shift, and go to state 65
    MINUS     shift, and go to state 66
    NOT       shift, and go to state 67
    PARSEINT  shift, and go to state 43
    PLUS      shift, and go to state 68
    ID        shift, and go to state 99
    BOOLLIT   shift, and go to state 71
    REALLIT   shift, and go to state 72
    DECLIT    shift, and go to state 73

    MethodInvocation  go to state 75
    ParseArgs         go to state 76
    Expr2             go to state 100


State 67

   72 Expr2: NOT . Expr2

    OCURV     shift, and go to state 65
    MINUS     shift, and go to state 66
    NOT       shift, and go to state 67
    PARSEINT  shift, and go to state 43
    PLUS      shift, and go to state 68
    ID        shift, and go to state 99
    BOOLLIT   shift, and go to state 71
    REALLIT   shift, and go to state 72
    DECLIT    shift, and go to state 73

    MethodInvocation  go to state 75
    ParseArgs         go to state 76
    Expr2             go to state 101


State 68

   70 Expr2: PLUS . Expr2

    OCURV     shift, and go to state 65
    MINUS     shift, and go to state 66
    NOT       shift, and go to state 67
    PARSEINT  shift, and go to state 43
    PLUS      shift, and go to state 68
    ID        shift, and go to state 99
    BOOLLIT   shift, and go to state 71
    REALLIT   shift, and go to state 72
    DECLIT    shift, and go to state 73

    MethodInvocation  go to state 75
    ParseArgs         go to state 76
    Expr2             go to state 102


State 69

   41 Statement: RETURN SEMI .

    $default  reduce using rule 41 (Statement)


State 70

   45 Assignment: ID . ASSIGN Expr
   46 MethodInvocation: ID . OCURV ExprList CCURV
   47                 | ID . OCURV CCURV
   48                 | ID . OCURV error CCURV
   73 Expr2: ID . DOTLENGTH
   74      | ID .

    OCURV      shift, and go to state 82
    ASSIGN     shift, and go to state 83
    DOTLENGTH  shift, and go to state 103

    $default  reduce using rule 74 (Expr2)


State 71

   76 Expr2: BOOLLIT .

    $default  reduce using rule 76 (Expr2)


State 72

   78 Expr2: REALLIT .

    $default  reduce using rule 78 (Expr2)


State 73

   77 Expr2: DECLIT .

    $default  reduce using rule 77 (Expr2)


State 74

   53 Expr: Assignment .

    $default  reduce using rule 53 (Expr)


State 75

   55 Expr2: MethodInvocation .

    $default  reduce using rule 55 (Expr2)


State 76

   56 Expr2: ParseArgs .

    $default  reduce using rule 56 (Expr2)


State 77

   40 Statement: RETURN Expr . SEMI

    SEMI  shift, and go to state 104


State 78
